dotrep-v2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotrep-v2
  labels:
    app: dotrep-v2
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: dotrep-v2
